<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_screen_background_tint"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchScreenToolbar"
        style="@style/toolbar_style"
        app:title="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/edittext_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:drawableTint="@color/search_line_hint_color"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:textColor="@color/search_input_text_color"
            android:textColorHint="@color/search_line_hint_color"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/clearIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/clear"
            android:src="@drawable/ic_button_clear"
            app:tint="@color/search_line_hint_color"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noConnectionPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/no_connection_text"
            android:src="@drawable/ph_no_connection" />

        <TextView
            style="@style/search_screen_text_style"
            android:text="@string/no_connection_text" />

        <Button
            android:id="@+id/retrySearch"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrySearch"
            style="@style/search_screen_button_retry_research_style"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nothingFoundPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/no_connection_text"
            android:src="@drawable/ph_nothing_found" />

        <TextView
            style="@style/search_screen_text_style"
            android:text="@string/nothing_found" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:visibility="visible"
        android:id="@+id/rvListOfTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:backgroundTint="@color/common_screen_background_tint"/>

    <LinearLayout
        android:id="@+id/historyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:visibility="gone">

        <TextView
            android:text="@string/search_history"
            style="@style/search_screen_text_style"/>

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="visible"
            android:id="@+id/rvHistoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/common_screen_background_tint"/>
        
        <Button
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            android:layout_gravity="center_horizontal"
            style="@style/search_screen_button_retry_research_style"/>
    </LinearLayout>
</LinearLayout>
