<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background_tint_light_version"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/medium_padding"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/header_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textSize="@dimen/header_size"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/main_menu_button_radius"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textSize="@dimen/header_size"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/main_menu_button_radius"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="@dimen/header_size"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/main_menu_button_radius"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>